--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,1 +1,82 @@
-<p>signup works!</p>
+<div class="bg" style="background-color: #f8f8f8">
+  <nz-spin [nzSpinning]="isSpinning" [nzSize]="'large'" nzTip="working...">
+    <div class="parent">
+      <div class="child">
+        <div nz-row class="imgDiv">
+          <div nz-col nzSpan="24">
+            <h1 style="margin-left: 80px">Sign Up</h1>
+          </div>
+        </div>
+        <form nz-form>
+          <nz-form-item>
+            <nz-form-control
+              nzHasFeedback
+              nzErrorTip="The input is not a valid Email"
+            >
+              <input nz-input placeholder="E-mail" id="email" />
+            </nz-form-control>
+          </nz-form-item>
+
+          <nz-form-item>
+            <nz-form-control nzHasFeedback nzErrorTip="errorPass">
+              <input
+                nz-input
+                placeholder="Password"
+                type="password"
+                id="password"
+              />
+              <ng-template #errorPass let-control>
+                <ng-container *ngIf="control.hasError('required')">
+                  Password is required
+                </ng-container>
+                <ng-container *ngIf="control.hasError('pattern')">
+                  Password Should contain 8 Characters , 1 Lowercase , 1
+                  Uppercase , 1 Number and 1 Special Character
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+          <nz-form-item>
+            <nz-form-control nzHasFeedback [nzErrorTip]="errorTpl">
+              <input
+                nz-input
+                placeholder="Confirm Password"
+                type="password"
+                id="checkPassword"
+              />
+              <ng-template #errorTpl let-control>
+                <ng-container *ngIf="control.hasError('required')">
+                  Please confirm your password!
+                </ng-container>
+                <ng-container *ngIf="control.hasError('confirm')">
+                  Two passwords that you enter is inconsistent
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+          <nz-form-item>
+            <nz-form-control nzHasFeedback nzErrorTip="userErrorTpl">
+              <input nz-input placeholder="Name" id="username" />
+              <ng-template #userErrorTpl let-control>
+                <ng-container *ngIf="control.hasError('required')">
+                  Please input your username!
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+          <button
+            nz-button
+            class="login-form-button login-form-margin"
+            [nzType]="'primary'"
+          >
+            Register
+          </button>
+          Or <a routerLink="/login">login now!</a>
+        </form>
+      </div>
+    </div>
+  </nz-spin>
+</div>
