--- a/src/app/modules/customer/components/book-car/book-car.component.html
+++ b/src/app/modules/customer/components/book-car/book-car.component.html
@@ -1,9 +1,9 @@
-<div style="background-color: #f8f8f8; min-height: 91vh">
+<div style="background-color: #f8f8f8; min-height: 91vh" *ngIf="car">
     <div style="padding-top: 10px;">
-        <div style="margin-top: 10px;" class="child" *ngFor="let car of cars">
+        <div style="margin-top: 10px;" class="child">
             <div nz-row>
                 <div nz-col  nzSpan="8">
-                    <img class="profile" style="height: 130px; width: 200px; border-radius: 10px;" [src]="car.processedImg" alt="profile" />
+                    <img class="profile" style="height: 130px; width: 200px; border-radius: 10px;" [src]="this.processedImage" alt="profile" />
                 </div>
                 <div nz-col nzSpan="16">
                     <h2 style="cursor: pointer; color: #108ee9;">
@@ -18,9 +18,6 @@
                        Transmission : <b>{{car.transmission}}</b> - Type : <b>{{car.type}}</b> - Year : <b>{{car.year | date : 'yyyy'}}</b>
                     </h5>
                     <hr>
-                    <div style="float: right;">
-                        <button style="margin-left: 10px;" nzSize = "small" nz-button nzType="primary" [routerLink]="['/customer/book', car.id]">Book</button>
-                    </div>
             </div>
 
         </div>
